--- a/web/index.html
+++ b/web/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <base href="/">
+  <base href="/nft/">
   <base href="$FLUTTER_BASE_HREF">
 
   <meta charset="UTF-8">
